--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url(./assets/css/reset.css);
+@import url(./assets/css/bootstrap-grid.min.css);
+@import url(./assets/css/animations.css);
+@import url(./assets/css/perfect-scrollbar.css);
+@import url(./assets/css/owl.carousel.css);
+@import url(./assets/css/magnific-popup.css);
+@import url(./assets/css/main.css);
