--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-
+// core style files
 @import url(./assets/css/reset.css);
 @import url(./assets/css/bootstrap-grid.min.css);
 @import url(./assets/css/animations.css);
@@ -7,3 +7,5 @@
 @import url(./assets/css/owl.carousel.css);
 @import url(./assets/css/magnific-popup.css);
 @import url(./assets/css/main.css);
+// toaster style file
+@import '~ngx-toastr/toastr';
