added blogs and about info

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
     <header id="site_header" class="header mobile-menu-hide">
       <div class="header-content">
         <div class="header-photo">
-          <img src="../assets/img/ankit.JPG" alt="Ankit Kumar Sharma" />
+          <img src="../assets/img/ankit.JPG" alt="{{myInfo.name}}" />
         </div>
         <div class="header-titles">
           <h2>{{myInfo.name}}</h2>
