--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -215,11 +215,11 @@ input[type="submit"]:focus {
 }
 
 
-/* ============================================================================= 
+/* =============================================================================
 3. Page loadig animation
 ============================================================================= */
 .no-js .preloader,
-.no-js .preloader-portfolio { 
+.no-js .preloader-portfolio {
   display: none;
 }
 .preloader,
@@ -251,7 +251,7 @@ input[type="submit"]:focus {
   margin: 100px auto;
   background-color: #04b4e0;
 
-  border-radius: 100%;  
+  border-radius: 100%;
   -webkit-animation: sk-scaleout 1.0s infinite ease-in-out;
   animation: sk-scaleout 1.0s infinite ease-in-out;
 }
@@ -265,7 +265,7 @@ input[type="submit"]:focus {
 }
 
 @keyframes sk-scaleout {
-  0% { 
+  0% {
     -webkit-transform: scale(0);
     transform: scale(0);
   } 100% {
@@ -439,7 +439,7 @@ input[type="submit"]:focus {
   color: #fff;
   margin: 5px 0 7px;
   line-height: 1.2em;
-} 
+}
 
 .header-titles h4 {
   font-size: 18px;
@@ -886,31 +886,31 @@ textarea.form-control, textarea.form-control:focus {
 
 /* --- White Spaces --- */
 .white-space-10 {
-  padding-bottom: 10px; 
+  padding-bottom: 10px;
 }
 
 .white-space-20 {
-  padding-bottom: 20px; 
+  padding-bottom: 20px;
 }
 
 .white-space-30 {
-  padding-bottom: 30px; 
+  padding-bottom: 30px;
 }
 
 .white-space-40 {
-  padding-bottom: 40px; 
+  padding-bottom: 40px;
 }
 
 .white-space-50 {
-  padding-bottom: 50px; 
+  padding-bottom: 50px;
 }
 
 .white-space-60 {
-  padding-bottom: 60px; 
+  padding-bottom: 60px;
 }
 
 .white-space-70 {
-  padding-bottom: 70px; 
+  padding-bottom: 70px;
 }
 /* --- End White Spaces --- */
 
@@ -1267,10 +1267,10 @@ textarea.form-control, textarea.form-control:focus {
   margin-bottom: 30px;
 }
 
-.skills-info.skills-second-style h4 { 
+.skills-info.skills-second-style h4 {
   font-size: 13px;
   line-height: 1.1em;
-  position: relative; 
+  position: relative;
   float: left;
   margin: 0 0 4px;
 }
@@ -1674,6 +1674,7 @@ textarea.form-control, textarea.form-control:focus {
   position: relative;
   padding: 0;
   background: #fff;
+  border: 1px solid #ddd;
 }
 
 .blog-card .post-image {
@@ -1705,7 +1706,7 @@ textarea.form-control, textarea.form-control:focus {
 
 .blog-card .post-info {
   padding: 1em 1.4em 1.4em;
-  border: 1px solid #f5f5f5;
+  /* border: 1px solid #f5f5f5; */
   border-top: 0;
 }
 
@@ -2609,7 +2610,7 @@ blockquote {
 
 
 
-/* ============================================================================= 
+/* =============================================================================
 9. Pricing
 ============================================================================= */
 /* Pricing */
@@ -2733,7 +2734,7 @@ blockquote {
 
 
 
-/* ============================================================================= 
+/* =============================================================================
 10. Updates
 ============================================================================= */
 
@@ -2944,8 +2945,8 @@ blockquote {
 }
 /*----- tabs css */
 .tab-container{
-  border-radius: 4px;
-  border: 1px solid #ccc;
+  /* border-radius: 4px; */
+  /* border: 1px solid #ccc; */
   padding: 5px;
 }
 .tab-menu{}
@@ -2956,6 +2957,8 @@ blockquote {
 .tab-menu ul li{
 	list-style-type: none;
 	display: inline-block;
+  border: 1px solid #ddd;
+  margin-right: 5px;
 }
 .tab-menu ul li a{
 	text-decoration: none;
@@ -2968,7 +2971,7 @@ blockquote {
 }
 .tab{
 	display: none;
-  padding: 10px;
+  /* padding: 10px; */
   padding-top: 15px;
 }
 .tab h2{
