--- a/src/app/components/contact-me/contact-me.component.html
+++ b/src/app/components/contact-me/contact-me.component.html
@@ -9,31 +9,31 @@
       <div class="col-xs-12 col-sm-4">
         <div class="lm-info-block gray-default">
           <i class="lnr lnr-map-marker"></i>
-          <h4>Delhi</h4>
+          <h4>{{contactInfo.place}}</h4>
           <span class="lm-info-block-value"></span>
           <span class="lm-info-block-text"></span>
         </div>
 
         <div class="lm-info-block gray-default">
           <i class="lnr lnr-phone-handset"></i>
-          <h4>+91 9311564928</h4>
+          <h4>{{contactInfo.mobile}}</h4>
           <span class="lm-info-block-value"></span>
           <span class="lm-info-block-text"></span>
         </div>
 
         <div class="lm-info-block gray-default">
           <i class="lnr lnr-envelope"></i>
-          <h4>aks.computerexpert@gmail.com</h4>
+          <h4>{{contactInfo.emailId}}</h4>
           <span class="lm-info-block-value"></span>
           <span class="lm-info-block-text"></span>
         </div>
 
-        <div class="lm-info-block gray-default">
+        <!-- <div class="lm-info-block gray-default">
           <i class="lnr lnr-checkmark-circle"></i>
           <h4>Freelance Available</h4>
           <span class="lm-info-block-value"></span>
           <span class="lm-info-block-text"></span>
-        </div>
+        </div> -->
       </div>
       <!-- End of Contact Info -->
 
@@ -45,71 +45,62 @@
         </div>
 
         <form
-          id="contact_form"
           class="contact-form"
-          action="/contact_form/email.php"
-          method="post"
+          [formGroup]="contactForm"
+          (ngSubmit)="onSubmitContactForm()"
         >
           <div class="messages"></div>
 
           <div class="controls two-columns">
             <div class="fields clearfix">
               <div class="left-column">
-                <div class="form-group form-group-with-icon">
+                <div class="form-group form-group-with-icon" [ngClass]="{'has-error': nameControl}">
                   <input
                     id="form_name"
                     type="text"
-                    name="name"
+                    formControlName="name"
                     class="form-control"
-                    placeholder=""
-                    required="required"
-                    data-error="Name is required."
                   />
                   <label>Full Name</label>
                   <div class="form-control-border"></div>
-                  <div class="help-block with-errors"></div>
+                  <div *ngIf="nameControl" class="help-block with-errors">{{labels.errorMessage.required}}</div>
                 </div>
 
-                <div class="form-group form-group-with-icon">
+                <div class="form-group form-group-with-icon" [ngClass]="{'has-error': emailControl}">
                   <input
                     id="form_email"
                     type="email"
-                    name="email"
+                    formControlName="email"
                     class="form-control"
-                    placeholder=""
-                    required="required"
-                    data-error="Valid email is required."
                   />
                   <label>Email Address</label>
                   <div class="form-control-border"></div>
-                  <div class="help-block with-errors"></div>
+                 <div *ngIf="emailControl" class="help-block with-errors">
+                  <div *ngIf="emailControl['required']">{{labels.errorMessage.required}}</div>
+                  <div *ngIf="emailControl['email']">{{labels.errorMessage.emailFormat}}</div>
+                 </div>
                 </div>
 
-                <div class="form-group form-group-with-icon">
+                <div class="form-group form-group-with-icon" [ngClass]="{'has-error': subjectControl}">
                   <input
                     id="form_subject"
                     type="text"
-                    name="subject"
+                    formControlName="subject"
                     class="form-control"
-                    placeholder=""
-                    required="required"
-                    data-error="Subject is required."
                   />
                   <label>Subject</label>
                   <div class="form-control-border"></div>
-                  <div class="help-block with-errors"></div>
+                 <div *ngIf="subjectControl" class="help-block with-errors">{{labels.errorMessage.required}}</div>
                 </div>
               </div>
               <div class="right-column">
                 <div class="form-group form-group-with-icon">
                   <textarea
                     id="form_message"
-                    name="message"
+                    formControlName="message"
                     class="form-control"
                     placeholder=""
                     rows="7"
-                    required="required"
-                    data-error="Please, leave me a message."
                   ></textarea>
                   <label>Message</label>
                   <div class="form-control-border"></div>
