--- a/src/app/components/portfolio/portfolio.component.html
+++ b/src/app/components/portfolio/portfolio.component.html
@@ -3,73 +3,40 @@
     <div class="page-title">
       <h2>Portfolio</h2>
     </div>
-    <h5>will update soon ...</h5>
+    <a href="http://portfolio.ankitkumarsharma.com/" target="_blank" class="btn btn-primary">For Portfolio, please ckick here</a>
+    <!-- <h5>will update soon ...</h5> -->
     <div style="display: none" class="row">
       <div class="col-xs-12 col-sm-12">
         <!-- Portfolio Content -->
         <div class="portfolio-content">
           <ul class="portfolio-filters">
             <li class="active">
-              <a
-                class="filter btn btn-sm btn-link"
-                data-group="category_all"
-                >All</a
-              >
+              <a class="filter btn btn-sm btn-link" data-group="category_all">All</a>
             </li>
             <li>
-              <a
-                class="filter btn btn-sm btn-link"
-                data-group="category_design"
-                >Design</a
-              >
+              <a class="filter btn btn-sm btn-link" data-group="category_design">Design</a>
             </li>
             <li>
-              <a
-                class="filter btn btn-sm btn-link"
-                data-group="category_development"
-                >Development</a
-              >
+              <a class="filter btn btn-sm btn-link" data-group="category_development">Development</a>
             </li>
             <li>
-              <a
-                class="filter btn btn-sm btn-link"
-                data-group="category_ecommerce"
-                >E-commerce</a
-              >
+              <a class="filter btn btn-sm btn-link" data-group="category_ecommerce">E-commerce</a>
             </li>
             <li>
-              <a
-                class="filter btn btn-sm btn-link"
-                data-group="category_wordpress"
-                >Wordpress</a
-              >
+              <a class="filter btn btn-sm btn-link" data-group="category_wordpress">Wordpress</a>
             </li>
             <li>
-              <a
-                class="filter btn btn-sm btn-link"
-                data-group="category_youtube"
-                >YouTube Videos</a
-              >
+              <a class="filter btn btn-sm btn-link" data-group="category_youtube">YouTube Videos</a>
             </li>
           </ul>
 
           <!-- Portfolio Grid -->
           <div class="portfolio-grid three-columns">
-            <figure
-              class="item lbaudio"
-              data-groups='["category_all", "category_ecommerce"]'
-            >
+            <figure class="item lbaudio" data-groups='["category_all", "category_ecommerce"]'>
               <div class="portfolio-item-img">
-                <img
-                  src="../assets/img/portfolio/1.jpg"
-                  alt="SoundCloud Audio"
-                  title=""
-                />
-                <a
-                  href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/221650664&#038;color=%23ff5500&#038;auto_play=false&#038;hide_related=false&#038;show_comments=true&#038;show_user=true&#038;show_reposts=false&#038;show_teaser=true&#038;visual=true"
-                  class="lightbox mfp-iframe"
-                  title="SoundCloud Audio"
-                ></a>
+                <img src="../assets/img/portfolio/1.jpg" alt="SoundCloud Audio" title="" />
+                <a href="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/221650664&#038;color=%23ff5500&#038;auto_play=false&#038;hide_related=false&#038;show_comments=true&#038;show_user=true&#038;show_reposts=false&#038;show_teaser=true&#038;visual=true"
+                  class="lightbox mfp-iframe" title="SoundCloud Audio"></a>
               </div>
 
               <i class="fa fa-volume-up"></i>
@@ -77,16 +44,9 @@
               <span class="category">SoundCloud</span>
             </figure>
 
-            <figure
-              class="item standard"
-              data-groups='["category_all", "category_design"]'
-            >
+            <figure class="item standard" data-groups='["category_all", "category_design"]'>
               <div class="portfolio-item-img">
-                <img
-                  src="../assets/img/portfolio/2.jpg"
-                  alt="Media Project 2"
-                  title=""
-                />
+                <img src="../assets/img/portfolio/2.jpg" alt="Media Project 2" title="" />
                 <a href="portfolio-1.html" class="ajax-page-load"></a>
               </div>
 
@@ -95,21 +55,11 @@
               <span class="category">Detailed</span>
             </figure>
 
-            <figure
-              class="item lbvideo"
-              data-groups='["category_all", "category_wordpress"]'
-            >
+            <figure class="item lbvideo" data-groups='["category_all", "category_wordpress"]'>
               <div class="portfolio-item-img">
-                <img
-                  src="../assets/img/portfolio/3.jpg"
-                  alt="Vimeo Video 1"
-                  title=""
-                />
-                <a
-                  href="https://player.vimeo.com/video/158284739"
-                  class="lightbox mfp-iframe"
-                  title="Vimeo Video 1"
-                ></a>
+                <img src="../assets/img/portfolio/3.jpg" alt="Vimeo Video 1" title="" />
+                <a href="https://player.vimeo.com/video/158284739" class="lightbox mfp-iframe"
+                  title="Vimeo Video 1"></a>
               </div>
 
               <i class="fas fa-video"></i>
@@ -117,16 +67,9 @@
               <span class="category">Vimeo Videos</span>
             </figure>
 
-            <figure
-              class="item standard"
-              data-groups='["category_all", "category_design"]'
-            >
+            <figure class="item standard" data-groups='["category_all", "category_design"]'>
               <div class="portfolio-item-img">
-                <img
-                  src="../assets/img/portfolio/4.jpg"
-                  alt="Media Project 1"
-                  title=""
-                />
+                <img src="../assets/img/portfolio/4.jpg" alt="Media Project 1" title="" />
                 <a href="portfolio-1.html" class="ajax-page-load"></a>
               </div>
 
@@ -135,21 +78,10 @@
               <span class="category">Detailed</span>
             </figure>
 
-            <figure
-              class="item lbimage"
-              data-groups='["category_all", "category_development"]'
-            >
+            <figure class="item lbimage" data-groups='["category_all", "category_development"]'>
               <div class="portfolio-item-img">
-                <img
-                  src="../assets/img/portfolio/5.jpg"
-                  alt="Mockup Design 1"
-                  title=""
-                />
-                <a
-                  class="lightbox"
-                  title="Mockup Design 1"
-                  href="../assets/img/portfolio/full/5.jpg"
-                ></a>
+                <img src="../assets/img/portfolio/5.jpg" alt="Mockup Design 1" title="" />
+                <a class="lightbox" title="Mockup Design 1" href="../assets/img/portfolio/full/5.jpg"></a>
               </div>
 
               <i class="far fa-image"></i>
@@ -157,21 +89,11 @@
               <span class="category">Mockups</span>
             </figure>
 
-            <figure
-              class="item lbvideo"
-              data-groups='["category_all", "category_youtube"]'
-            >
+            <figure class="item lbvideo" data-groups='["category_all", "category_youtube"]'>
               <div class="portfolio-item-img">
-                <img
-                  src="../assets/img/portfolio/6.jpg"
-                  alt="YouTube Video 1"
-                  title=""
-                />
-                <a
-                  href="https://www.youtube.com/embed/bg0gv2YpIok"
-                  class="lightbox mfp-iframe"
-                  title="YouTube Video 1"
-                ></a>
+                <img src="../assets/img/portfolio/6.jpg" alt="YouTube Video 1" title="" />
+                <a href="https://www.youtube.com/embed/bg0gv2YpIok" class="lightbox mfp-iframe"
+                  title="YouTube Video 1"></a>
               </div>
 
               <i class="fas fa-video"></i>
