--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
 // core style files
-@import url(./assets/css/reset.css);
-@import url(./assets/css/bootstrap-grid.min.css);
-@import url(./assets/css/animations.css);
-@import url(./assets/css/perfect-scrollbar.css);
-@import url(./assets/css/owl.carousel.css);
-@import url(./assets/css/magnific-popup.css);
-@import url(./assets/css/main.css);
+@import './assets/css/reset.css';
+@import './assets/css/bootstrap-grid.min.css';
+@import './assets/css/animations.css';
+@import './assets/css/perfect-scrollbar.css';
+@import './assets/css/owl.carousel.css';
+@import './assets/css/magnific-popup.css';
+@import './assets/css/main.css';
 // toaster style file
-@import '~ngx-toastr/toastr';
+@import '../node_modules/ngx-toastr/toastr.css';
+
+.page-container {
+  position: absolute;
+  background-color: transparent;
+  height: 100%;
+  width: 100%;
+  border-radius: 30px;
+  padding: 0;
+  overflow: auto;
+  -webkit-transform: translate3d(0,0,0);
+  -moz-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-position: 50% 50%;
+  background-size: cover;
+}
