--- a/src/app/components/blog/blog.html
+++ b/src/app/components/blog/blog.html
@@ -8,36 +8,37 @@
             <div class="tab-menu">
                 <ul>
                     @for (item of blogs.tabMenu; track $index; let i=$index;) {
-                    <li (click)="onTabFn(i)"><a [class.active-a]="tabActiveIndex == i" class="tab-a active-a">{{item}}</a></li>
+                    <li (click)="onTabFn(i)"><a [class.active-a]="tabActiveIndex == i"
+                            class="tab-a active-a">{{item}}</a></li>
                     }
                 </ul>
             </div>
             <!--end of tab-menu-->
-            @if (tabActiveIndex == 0) {
-            <div [class.tab-active]="tabActiveIndex == 0" class="tab">
-                <!---blogs-->
+            @for (item of blogs.tabList; track $index; let i=$index;){
+            <div [class.tab-active]="tabActiveIndex == i" class="tab">
+                <!---blog-->
                 <div class="row">
                     <div class="col-xs-12 col-sm-12">
                         <div class="blog-masonry two-columns clearfix">
-                            <!-- Blog Post 1 -->
-                            @for (item of blogs.tab1; track $index; let i=$index;) {
-                            <div class="item post-{{i+1}}">
+                            <!-- Blog Post -->
+                            @for (tab of item.tab; track $index; let j=$index;) {
+                            <div class="item post-{{j+1}}">
                                 <div class="blog-card">
                                     <div class="media-block">
                                         <div class="category">
-                                            <a title="{{item.category}}">{{item.category}}</a>
+                                            <a title="{{tab.category}}">{{tab.category}}</a>
                                         </div>
-                                        <a target="_blank" href="{{item.link}}">
-                                            <img src="{{item.src}}" class="size-blog-masonry-image-two-c"
-                                                alt="{{item.title}}" title="{{item.title}}" />
+                                        <a target="_blank" href="{{tab.link}}">
+                                            <img src="{{tab.src}}" class="size-blog-masonry-image-two-c"
+                                                alt="{{tab.title}}" title="{{tab.title}}" />
                                             <div class="mask"></div>
                                         </a>
                                     </div>
                                     <div class="post-info">
-                                        <div class="post-date">{{item.date}}</div>
-                                        <a target="_blank" href="{{item.link}}">
+                                        <div class="post-date">{{tab.date}}</div>
+                                        <a target="_blank" href="{{tab.link}}">
                                             <h4 class="blog-item-title">
-                                                {{item.title}}
+                                                {{tab.title}}
                                             </h4>
                                         </a>
                                     </div>
@@ -48,43 +49,6 @@
                     </div>
                 </div>
             </div>
-            <!--end of tab one-->
-            } @else if (tabActiveIndex == 1) {
-            <div [class.tab-active]="tabActiveIndex == 1" class="tab">
-                <!---blogs-->
-                <div class="row">
-                    <div class="col-xs-12 col-sm-12">
-                        <div class="blog-masonry two-columns clearfix">
-                            <!-- Blog Post 1 -->
-                            @for (item of blogs.tab2; track $index; let i=$index;) {
-                            <div class="item post-{{i+1}}">
-                                <div class="blog-card">
-                                    <div class="media-block">
-                                        <div class="category">
-                                            <a title="{{item.category}}">{{item.category}}</a>
-                                        </div>
-                                        <a target="_blank" href="{{item.link}}">
-                                            <img src="{{item.src}}" class="size-blog-masonry-image-two-c"
-                                                alt="{{item.title}}" title="{{item.title}}" />
-                                            <div class="mask"></div>
-                                        </a>
-                                    </div>
-                                    <div class="post-info">
-                                        <div class="post-date">{{item.date}}</div>
-                                        <a target="_blank" href="{{item.link}}">
-                                            <h4 class="blog-item-title">
-                                                {{item.title}}
-                                            </h4>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                            }
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--end of tab two-->
             }
         </div>
         <!--end of container-->
