added portfolio and demo part dynamic

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -4,23 +4,16 @@
       <div class="col-sm-12 col-md-12 col-lg-12">
         <div class="title-block">
           <div class="title-img">
-            <img
-              src="../assets/img/ankit.jpeg"
-              alt="Ankit Kumar Sharma"
-            />
+            <img [src]="homeData.photo" [alt]="homeData.name" />
           </div>
-          <h2>Ankit Kumar Sharma</h2>
-          <h3>aks.computerexpert&#64;gmail.com</h3>
+          <h2>{{homeData.name}}</h2>
+          <h3>{{homeData.email}}</h3>
           <div class="owl-carousel text-rotation">
+            @for (item of homeData.slider; track $index) {
             <div class="item">
-              <div class="sp-subtitle">Software Engineer</div>
+              <div class="sp-subtitle">{{item}}</div>
             </div>
-            <div class="item">
-              <div class="sp-subtitle">Trainer - Blogger</div>
-            </div>
-            <div class="item">
-              <div class="sp-subtitle">Motivational Speaker</div>
-            </div>
+            }
           </div>
         </div>
       </div>
