update portfolio and blogs

--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -1,5 +1,6 @@
 <section class="start-page page-container">
   <div class="section-content vcentered">
+    <a href="https://angular-snippets.vercel.app/" target="_blank" class="angular-snipp-btn btn btn-primary">Angular Snippets App - Add your snipp</a>
     <div class="row">
       <div class="col-sm-12 col-md-12 col-lg-12">
         <div class="title-block">
