--- a/src/app/components/portfolio/portfolio.scss
+++ b/src/app/components/portfolio/portfolio.scss
@@ -3,9 +3,16 @@
         .name {
             min-height: 85px;
         }
-        a{
+
+        a {
             padding: 70px;
             text-align: center;
+        }
+
+        img {
+            border: 1px solid #ddd;
+            width: 100%;
+            height: 165px;
         }
     }
 }
@@ -15,6 +22,7 @@
         li {
             &.active {
                 border-color: #04b4e0;
+
                 a {
                     color: #04b4e0;
                 }
