update portfolio and resume

--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -28,7 +28,7 @@
     </ul>
   </div>
   <div class="header-buttons">
-    <a href="../assets/resume/Ankit_Kumar_Sharma_Resume.docx" target="_blank" class="btn btn-primary">Download
+    <a href="../assets/resume/Ankit_Kumar_Sharma_Resume.pdf" target="_blank" class="btn btn-primary">Download
       CV</a>
   </div>
 
